[gd_scene load_steps=8 format=2]

[ext_resource path="res://_debug/airdrop.svg" type="Texture" id=1]
[ext_resource path="res://menu/shop/button/shop_button.gd" type="Script" id=2]
[ext_resource path="res://menu/shop/button/select.wav" type="AudioStream" id=3]
[ext_resource path="res://resources/fonts/rubik.ttf" type="DynamicFontData" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.2 )
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 4 )

[node name="ShopButton" type="Button"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 160.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 160 )
focus_mode = 0
enabled_focus_mode = 0
script = ExtResource( 2 )

[node name="InfoPanel" type="Panel" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -448.0
margin_top = -80.0
margin_right = -18.0
margin_bottom = 80.0
custom_styles/panel = SubResource( 1 )

[node name="Name" type="Label" parent="InfoPanel"]
anchor_right = 1.0
anchor_bottom = 0.4
margin_left = 30.0
margin_right = -30.0
custom_fonts/font = SubResource( 2 )
text = "NAME"
valign = 1

[node name="Description" type="Label" parent="InfoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 64.0
margin_right = -14.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 3 )
text = "Description"

[node name="Cost" type="Label" parent="InfoPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 112.0
margin_right = -14.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 3 )
text = "Cost"
align = 2
valign = 2

[node name="Tween" type="Tween" parent="."]

[node name="Icon" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="FocusPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
